--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -7,15 +7,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling": "^0.1.13",
     "react-horizontal-scrolling-menu": "^4.1.1",
     "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "reactjs-popup": "^2.0.6",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
