--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +23,7 @@
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "reactjs-popup": "^2.0.6",
+    "snackbar": "^1.1.0",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
